--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -2,7 +2,7 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 name: Cypress Tests
 
-on: [push]
+on: [push,pull_request]
 
 jobs:
   cypress-run:
